ItemPicker - fixed a white-space wrapping bug

--- a/src/Umbraco.Community.Contentment/DataEditors/ItemPicker/item-picker.overlay.css
+++ b/src/Umbraco.Community.Contentment/DataEditors/ItemPicker/item-picker.overlay.css
@@ -20,6 +20,7 @@
 .contentment .umb-action-link .menu-label {
     margin-left: 15px;
     padding-left: 0;
+    white-space: normal;
 }
 
 .contentment.lk-overlay .umb-action {
